test: 예약 ID 조회 결과 단건 검증 강화